@startuml

Jugador "1" -- "1..*" Pais
Jugador "1" -> "*" TarjetaPais
Jugador  --->  Canjes
Canjes "1" o-- "*" Canje
Canjes ..> "*" TarjetaPais
Canjes ..> Jugador
Canje "1" o-- "3" TarjetaPais
Canje ..> Jugador


class Jugador {
     - nombreJugador: String
     - color: String
     - jugadorQueLoDestruyo: Jugador
     - tarjetaDeObjetivo: TarjetaObjetivo
     - ejercitosDeCanje: int
	+ Jugador(nombre, colorJugador, juego): Jugador
	+ agregarPais(nuevoPais)
	+ desocupar(nombrePais)
	+ colocarEjercito(String nombrePais,int cantidadEjercito)
	+ establecerObjetivo(tarjetaObjetivo)
	+ cumplioObjetivo(tablero): boolean
	+ activarTarjetaPais(nombreTarjetaPais)
	+ solicitarUnCanje(nombresTarjetasPaisParaCanjear)
}

class Pais {

}

class Canje {
    - ejercitos: int
    - numeroDeCanje: int
	+ Canje(numeroDeCanje, canjes): Canje
	+ agregarTarjetaPaisParaCanjear(tarjetaPais)
	+ solicitarUnCanje(jugador, tarjetasPais): boolean
}

class Canjes {
	+ Canje(numeroDeCanje, canjes): Canje
	+ devolverTarjetasAlMazo(jugador,  tarjetasPaisParaDevolverAlMazo, tarjetasPais)
	+ solicitarUnCanje(nombresTarjetasPaisParaCanjear, jugador, tarjetasPais)
}

class TarjetaPais {
	+ activarTarjeta(jugador)
	+ puedeCanjear(tarjetaPais1, tarjetaPais2): boolean
}


@enduml